--- a/style.css
+++ b/style.css
@@ -1,4 +1,5 @@
-body{font-family: 'Poppins', sans-serif;}
+body{font-family: 'Poppins', sans-serif;
+margin: 0%;}
 
 h1{font-size: 50px;}
 
@@ -12,3 +13,7 @@ margin-left: 5%;
 padding-left: 2%;
 }
 .half-width img{ width: 100%;}
+
+.top-banner{background-image: url("image/top-banner.png");
+background-repeat: no-repeat;
+}
