--- a/style.css
+++ b/style.css
@@ -17,3 +17,4 @@ padding-left: 2%;
 .top-banner{background-image: url("image/top-banner.png");
 background-repeat: no-repeat;
 }
+section{height: 500px;}
