--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@ h2{font-size: 40px;}
 h3{font-size: 30px;}
 p{color: dimgray; }
 
-.name-heighlight{color: orange;}
+.orange-heighlight{color: orange;}
 
 .half-width{
 
@@ -36,3 +36,13 @@ section{height: 500px;
 padding-bottom: 150px;
 }
 
+.single-experience
+{
+    box-shadow: 10px 10px 40px gray;
+    border-radius: 5px;
+    height: 80%;
+}
+
+.experience-area{ background-image: url("image/exp-bg.png");
+background-repeat: no-repeat;
+background-position: left;}
