--- a/style.css
+++ b/style.css
@@ -15,9 +15,7 @@ p{color: dimgray; }
 
 .orange-heighlight{color: orange;}
 
-.half-width{
-
-width: 40%;
+.half-width{width: 40%;
 float: left;
 margin-left: 5%;
 padding-left: 2%;
@@ -46,3 +44,19 @@ padding-bottom: 150px;
 .experience-area{ background-image: url("image/exp-bg.png");
 background-repeat: no-repeat;
 background-position: left;}
+
+#full-stack{border-left: 6px solid;
+
+border-image:linear-gradient( 180deg, lightsalmon,tomato) ;
+border-image-slice: 1;
+} 
+
+#child-stack{
+    border-left: 6px solid;
+    border-image: linear-gradient(180deg, blue, cyan);
+    border-image-slice: 1;
+}
+footer p{
+    text-align: center;
+    font-size: 12px;
+}
